[project]
name = "tsuki"
version = "0.0.1"
description = "tsuki is a minimal safe communication software when you need actual privacy"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  'django',
  'cbor2',
  'loguru',
  'cryptography',
  'pynacl',
  "watchdog>=6.0.0",
  "pyjwt>=2.10.1",
]
